home-assistant/home-assistant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
spec:
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
      - name: home-assistant
        image: homeassistant/home-assistant:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8123
        volumeMounts:
        - mountPath: /config
          name: config
      volumes:
        - name: config
          hostPath:
            path: /Users/xie/Workspaces/data/home-assistant/config
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  selector:
    app: home-assistant
  type: NodePort
  ports:
  - port: 8123
    targetPort: 8123
