home-assistant/home-assistant-traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`home-assistant.foo.org`)
    kind: Rule
    services:
    - name: home-assistant
      port: 8123
